--- a/wiki/TypeSerializer.wiki
+++ b/wiki/TypeSerializer.wiki
@@ -53,9 +53,9 @@ _number of times larger in size and slower in performance than the best - lower 
 
 
 
-= TypeSerializer Text Format (JSV) =
+= JSV Text Format (JSON + CSV) =
 
-TypeSerializer uses a hybrid CSV-style escaping + JavaScript-like text-based format that is optimized for both size and speed. I'm naming this format JSV-format (i.e. JavaScript + CSV) 
+TypeSerializer uses a hybrid CSV-style escaping + JavaScript-like text-based format that is optimized for both size and speed. I'm naming this format JSV-format (i.e. JSON + CSV) 
 
 In many ways it is similar to JavaScript, e.g. any List, Array, Collection of ints, longs, etc are stored in exactly the same way, i.e:
 {{{
