--- a/wiki/TypeSerializer.wiki
+++ b/wiki/TypeSerializer.wiki
@@ -1,5 +1,5 @@
 #labels CSharp,Fastest,TextSerializer,Compact,Resilient
-The fastest and most compact text-based serializer for .NET data-types.
+The fastest and most compact text-based serializer for .NET.
 
 = Introduction =
 
