--- a/wiki/TypeSerializer.wiki
+++ b/wiki/TypeSerializer.wiki
@@ -25,11 +25,14 @@ TypeSerializer is included with [http://servicestack.googlecode.com/files/Servic
 
 
 = Performance =
-TypeSerializer is quick!, it's actually the fastest and most compact text serializer available for .NET. It actually remains competitive with [http://code.google.com/p/protobuf-net/ protobuf-net]'s very fast implementation of [http://code.google.com/apis/protocolbuffers/ Protocol Buffers] - google's high-speed binary protocol.
+Type Serializer is actually the fastest and most compact text serializer available for .NET. 
+It is also the only text serializer to remain competitive with [http://code.google.com/p/protobuf-net/ protobuf-net]'s very fast implementation of [http://code.google.com/apis/protocolbuffers/ Protocol Buffers] - google's high-speed binary protocol.
 
-Below is a summary of [benchmarks] to serialize each table in the [http://code.google.com/p/servicestack/source/browse/trunk/Common/Northwind.Benchmarks/Northwind.Common/DataModel/NorthwindData.cs Northwind database] (3202 records) in the most popular serializers available for .NET:
+Below is a series of benchmarks serialize the different tables in the [http://code.google.com/p/servicestack/source/browse/trunk/Common/Northwind.Benchmarks/Northwind.Common/DataModel/NorthwindData.cs Northwind database] (3202 records) with the most popular serializers available for .NET:
 
-=== Summary results for serializing / deserialzing the first row of each table in the [http://code.google.com/p/servicestack/source/browse/trunk/Common/Northwind.Benchmarks/Northwind.Common/DataModel/NorthwindData.cs Northwind database] 1,000,000 times ===
+=== Combined results for serializing / deserialzing the first row of each table in the Northwind database 1,000,000 times ===
+_[http://www.servicestack.net/benchmarks/NorthwindDatabaseRowsSerialization.1000000-times.2010-02-06.html view the detailed benchmarks]_
+
 || Serializer || Payload size || Serialize/Deserialize Peformance ||
 || Microsoft DataContractSerializer || 4.68x || 6.72x ||
 || Microsoft JsonDataContractSerializer|| 2.24x || 10.18x ||
@@ -40,7 +43,10 @@ Below is a summary of [benchmarks] to serialize each table in the [http://code.g
 
 _number of times larger in size and slower in performance than the best - lower is better_
 
-=== Summary results for serializing / deserialzing each table in the [http://code.google.com/p/servicestack/source/browse/trunk/Common/Northwind.Benchmarks/Northwind.Common/DataModel/NorthwindData.cs Northwind database] 1,000 times ===
+
+=== Combined results for serializing / deserialzing each table in the Northwind database 1,000 times ===
+_[http://www.servicestack.net/benchmarks/NorthwindDatabaseTablesSerialization.10000-times.2010-02-06.html view the detailed benchmarks]_
+
 || Serializer || Payload size || Serialize/Deserialize Peformance ||
 || Microsoft DataContractSerializer || 4.36x || 6.72x ||
 || Microsoft JsonDataContractSerializer|| 2.24x || 11.55x ||
