Edited wiki page through web user interface.

--- a/wiki/TypeSerializer.wiki
+++ b/wiki/TypeSerializer.wiki
@@ -21,7 +21,7 @@ As such, it's utilized within ServiceStack's other components:
   * [ServiceStackRedis ServiceStack.Redis] uses it to store rich POCO data types into the very fast [http://code.google.com/p/redis redis] instances.
 
 = Download =
-TypeSerializer is included with [http://servicestack.googlecode.com/files/ServiceStack.zip ServiceStack] or available to download separately in a standalone  [http://servicestack.googlecode.com/files/ServiceStack.Text.dll ServiceStack.Text.dll].
+TypeSerializer is included with [http://servicestack.googlecode.com/files/ServiceStack.zip ServiceStack.zip] or available to download separately in a standalone  [http://servicestack.googlecode.com/files/ServiceStack.Text.dll ServiceStack.Text.dll].
 
 
 = Performance =
@@ -56,7 +56,6 @@ _[http://www.servicestack.net/benchmarks/NorthwindDatabaseTablesSerialization.10
 || ServiceStack TypeSerializer || 1.67x || 1.92x ||
 
 _number of times larger in size and slower in performance than the best - lower is better_
-
 
 
 
