--- a/wiki/TypeSerializer.wiki
+++ b/wiki/TypeSerializer.wiki
@@ -61,7 +61,7 @@ _number of times larger in size and slower in performance than the best - lower 
 
 = JSV Text Format (JSON + CSV) =
 
-TypeSerializer uses a hybrid CSV-style escaping + JavaScript-like text-based format that is optimized for both size and speed. I'm naming this format JSV-format (i.e. JSON + CSV) 
+Type Serializer uses a hybrid CSV-style escaping + JavaScript-like text-based format that is optimized for both size and speed. I'm naming this format JSV-format (i.e. JSON + CSV) 
 
 In many ways it is similar to JavaScript, e.g. any List, Array, Collection of ints, longs, etc are stored in exactly the same way, i.e:
 {{{
@@ -73,7 +73,9 @@ Any IDictionary is serialized like JavaScript, i.e:
 {A:1,B:2,C:3,D:4}
 }}}
 
-Which also happens to be the same as C# POCO class with the values `new MyClass { A=1, B=2, C=3, D=4 }`
+Which also happens to be the same as C# POCO class with the values 
+
+`new MyClass { A=1, B=2, C=3, D=4 }`
 {{{
 {A:1,B:2,C:3,D:4}
 }}}
@@ -96,7 +98,7 @@ is escaped using CSV-style escaping where the value is wrapped in double quotes,
 }}}
 
 A value with a double-quote is escaped with another double quote e.g:
- 
+
 `new MyClass { Size = "2\" x 1\"" }` is serialized as:
 {{{
 {Size:"2"" x 1"""}
