--- a/wiki/TypeSerializer.wiki
+++ b/wiki/TypeSerializer.wiki
@@ -43,6 +43,7 @@ _[http://www.servicestack.net/benchmarks/NorthwindDatabaseRowsSerialization.1000
 
 _number of times larger in size and slower in performance than the best - lower is better_
 
+* Microsoft's JavaScriptSerializer was also benchmarked but excluded as it was up to 280x times slower. 
 
 === Combined results for serializing / deserialzing each entire table in the Northwind database 10,000 times ===
 _[http://www.servicestack.net/benchmarks/NorthwindDatabaseTablesSerialization.10000-times.2010-02-06.html view the detailed benchmarks]_
