--- a/wiki/ServiceStackRedis.wiki
+++ b/wiki/ServiceStackRedis.wiki
@@ -30,7 +30,7 @@ _Full source code of this example is [http://code.google.com/p/servicestack/sour
 using (var redisClient = new RedisClient())
 {
 	//Create a 'strongly-typed' API that makes all Redis Value operations to apply against Shippers
-	var redis = redisClient.CreateGenericClient<Shipper>();
+	IRedisTypedClient<Shipper> redis = redisClient.GetTypedClient<Shipper>();
 
 	//Redis lists implement IList<T> while Redis sets implement ICollection<T>
 	var currentShippers = redis.Lists["urn:shippers:current"];
