--- a/wiki/TypeSerializer.wiki
+++ b/wiki/TypeSerializer.wiki
@@ -1,4 +1,4 @@
-#labels CSharp,Fastest,TextSerializer,Compact,Resilient
+#labels CSharp,Fast,Compact,TextSerializer,Resilient
 The fastest and most compact text-based serializer for .NET.
 
 = Introduction =
@@ -45,19 +45,6 @@ _[http://www.servicestack.net/benchmarks/NorthwindDatabaseRowsSerialization.1000
 _number of times larger in size and slower in performance than the best - lower is better_
 
 Microsoft's JavaScriptSerializer was also benchmarked but excluded as it was up to 280x times slower - basically don't use it, ever. 
-
-=== Combined results for serializing / deserialzing each entire table in the Northwind database 10,000 times ===
-_[http://www.servicestack.net/benchmarks/NorthwindDatabaseTablesSerialization.10000-times.2010-02-06.html view the detailed benchmarks]_
-
-|| Serializer || Size || Peformance ||
-|| Microsoft DataContractSerializer || 4.08x || 5.36x ||
-|| Microsoft JsonDataContractSerializer|| 3.06x || 11.74x ||
-|| Microsoft BinaryFormatter || 1.05x || 5.01x ||
-|| NewtonSoft.Json || 3.07x || 10.75x ||
-|| ProtoBuf.net || 1x || 1x ||
-|| ServiceStack TypeSerializer || 2.19x || 2.91x ||
-
-_number of times larger in size and slower in performance than the best - lower is better_
 
 
 
