--- a/wiki/ServiceStackRedis.wiki
+++ b/wiki/ServiceStackRedis.wiki
@@ -5,11 +5,19 @@
 
 [ServiceStackRedis ServiceStack.Redis] is an Open Source C# Redis client based on [http://twitter.com/migueldeicaza Miguel de Icaza] previous efforts with [http://github.com/migueldeicaza/redis-sharp redis-sharp]. 
 
-The client gives you a choice 3 different API's to use based on your preference:
+There are a number of different APIs available optimized on your use-case:
+
+The [ServiceStack.Redis.RedisClient] class below implements the following interfaces:
   * [IRedisNativeClient] - Allows raw byte access to the Redis APIs
   * [IRedisClient] - Provides a friendlier, more descriptive API that lets you store values as strings (UTF8 encoding).
-  * [IRedisTypedClient] - Same as [IRedisClient] API except it lets you store and retrieve values of any type (e.g. C# POCO objects)
+  * [RedisClient.GetTypedClient<T>()] - returns a 'strongly-typed client' IRedisTypedClient<T> that makes all redis value operations work against any type (e.g. C# POCO objects)
 
+Also included is [RedisClientCache] which implements the ServiceStacks common [ICacheClient] interface (for which there are other InMemory, Memcached and FileSystem implementations which you can switch to use). 
+
+= Multi-threaded client managers =
+The above clients are ideal for use in single-threaded applications, for use in multi-threaded applications you can choose from our different client managers:
+ * [BasicRedisClientCacheManager] - a load-balance (master/slave) client manager that returns a new IRedisClient instance with the configured defaults (faster when accessing a redis-server instance on localhost).
+ * [PooledRedisClientManager] - a load-balanced (master/slave) client manager that uses a pool of redis clients.
 
 = Download =
 
