--- a/wiki/ServiceStackRedis.wiki
+++ b/wiki/ServiceStackRedis.wiki
@@ -17,7 +17,8 @@ Also included is [RedisClientCache] which implements the ServiceStacks common [I
 = Multi-threaded client managers =
 The above clients are ideal for use in single-threaded applications, for multi-threaded applications you can choose from our different client managers:
  * [BasicRedisClientManager] - a load-balance (master/slave) client manager that returns a new IRedisClient instance with the configured defaults (faster when accessing a redis-server instance on localhost).
- * [PooledRedisClientManager] - a load-balanced (master/slave) client manager that uses a pool of redis clients.
+
+ * [PooledRedisClientManager] - a load-balanced (master/slave) client manager that uses a pool of redis clients (faster when accessing a redis-server instance over the network).
 
 = Download =
 
