--- a/wiki/ServiceStackRedis.wiki
+++ b/wiki/ServiceStackRedis.wiki
@@ -5,21 +5,18 @@
 
 [ServiceStackRedis ServiceStack.Redis] is an Open Source C# Redis client based on [http://twitter.com/migueldeicaza Miguel de Icaza] previous efforts with [http://github.com/migueldeicaza/redis-sharp redis-sharp]. 
 
-There are a number of different APIs available optimized on your use-case:
-
+There are a number of different APIs available optimized on your use-case which all are a friendly drop-in with your local IOC:
 The [ServiceStack.Redis.RedisClient] class below implements the following interfaces:
- * [ICacheClient] - implements the ServiceStacks common [ICacheClient] interface (for which there are other InMemory, Memcached and FileSystem implementations available in ServiceStack). 
+ * [ICacheClient] - If you are using Redis solely as a cache, you should bind to the ServiceStack's common [ICacheClient] interface as there are other InMemory, Memcached and FileSystem implementations available in ServiceStack, allowing you to switch providers in-future. 
+  * [IRedisNativeClient] - For those wanting a low-level raw byte access that map 1:1 with Redis operations of the same name.
 
-  * [IRedisNativeClient] - Allows raw byte access to the Redis APIs
-
+For most cases if you require access to Redis-specific functionality you would want to bind to the interface below:
   * [IRedisClient] - Provides a friendlier, more descriptive API that lets you store values as strings (UTF8 encoding).
   * [IRedisTypedClient] - created with `IRedisClient.GetTypedClient<T>()`, returns a 'strongly-typed client' that provides a typed-interface for all redis value operations which works against any type (e.g. C# POCO objects)
 
-For most cases, 
-
 = Multi-threaded client managers =
-The above clients are ideal for use in single-threaded applications, for multi-threaded applications you can choose from our different client managers:
- * [BasicRedisClientManager] - a load-balance (master/slave) client manager that returns a new IRedisClient instance with the configured defaults (faster when accessing a redis-server instance on localhost).
+For multi-threaded applications you can choose from our different client managers:
+ * [BasicRedisClientManager] - a load-balance (master/slave) client manager that returns a new IRedisClient instance with the configured defaults (faster when accessing a redis-server instance on the same host).
 
  * [PooledRedisClientManager] - a load-balanced (master/slave) client manager that uses a pool of redis clients (faster when accessing a redis-server instance over the network).
 
