--- a/wiki/ServiceStackRedis.wiki
+++ b/wiki/ServiceStackRedis.wiki
@@ -14,7 +14,7 @@ For most cases if you require access to Redis-specific functionality you would w
   * [IRedisClient] - Provides a friendlier, more descriptive API that lets you store values as strings (UTF8 encoding).
   * [IRedisTypedClient] - created with `IRedisClient.GetTypedClient<T>()`, it returns a 'strongly-typed client' that provides a typed-interface for all redis value operations which works against any type (e.g. C# POCO objects)
 
-= Multi-threaded client managers =
+= Thread-safe clients =
 For multi-threaded applications you can choose from our different client managers:
  * [BasicRedisClientManager] - a load-balance (master-write and read-slaves) client manager that returns a new IRedisClient connection with the defaults specified (faster when accessing a redis-server instance on the same host).
 
