--- a/wiki/ServiceStackRedis.wiki
+++ b/wiki/ServiceStackRedis.wiki
@@ -5,7 +5,7 @@
 
 [ServiceStackRedis ServiceStack.Redis] is an Open Source C# Redis client based on [http://twitter.com/migueldeicaza Miguel de Icaza] previous efforts with [http://github.com/migueldeicaza/redis-sharp redis-sharp]. 
 
-There are a number of different APIs available optimized on your use-case which all are a friendly drop-in with your local IOC:
+There are a number of different APIs available which are all a friendly drop-in with your local IOC:
 The [ServiceStack.Redis.RedisClient] class below implements the following interfaces:
  * [Caching ICacheClient] - If you are using Redis solely as a cache, you should bind to the ServiceStack's common [ICacheClient] interface as there are other InMemory, Memcached and FileSystem implementations available in ServiceStack, allowing you to switch providers in-future. 
  * [IRedisNativeClient] - For those wanting a low-level raw byte access that map 1:1 with Redis operations of the same name.
