--- a/wiki/ServiceStackRedis.wiki
+++ b/wiki/ServiceStackRedis.wiki
@@ -12,7 +12,7 @@ The [ServiceStack.Redis.RedisClient] class below implements the following interf
 
 For most cases if you require access to Redis-specific functionality you would want to bind to the interface below:
   * [IRedisClient] - Provides a friendlier, more descriptive API that lets you store values as strings (UTF8 encoding).
-  * [IRedisTypedClient] - created with `IRedisClient.GetTypedClient<T>()`, it returns a 'strongly-typed client' that provides a typed-interface for all redis value operations which works against any type (e.g. C# POCO objects)
+  * [IRedisTypedClient] - created with `IRedisClient.GetTypedClient<T>()`, it returns a 'strongly-typed client' that provides a typed-interface for all redis value operations that works against any type (e.g. C# POCO objects)
 
 = Thread-safe clients =
 For multi-threaded applications you can choose from our different client managers:
