--- a/wiki/ServiceStackRedis.wiki
+++ b/wiki/ServiceStackRedis.wiki
@@ -7,7 +7,7 @@
 
 There are a number of different APIs available which are all a friendly drop-in with your local IOC:
 The [ServiceStack.Redis.RedisClient] class below implements the following interfaces:
- * [Caching ICacheClient] - If you are using Redis solely as a cache, you should bind to the ServiceStack's common [ICacheClient] interface as there are other InMemory, Memcached and FileSystem implementations available in ServiceStack, allowing you to switch providers in-future. 
+ * [Caching ICacheClient] - If you are using Redis solely as a cache, you should bind to the ServiceStack's common [ICacheClient] interface as there are other In-Memory an Memcached implementations available in ServiceStack, allowing you to easily switch providers in-future. 
  * [IRedisNativeClient] - For those wanting a low-level raw byte access that map 1:1 with Redis operations of the same name.
 
 For most cases if you require access to Redis-specific functionality you would want to bind to the interface below:
