--- a/wiki/TypeSerializer.wiki
+++ b/wiki/TypeSerializer.wiki
@@ -15,7 +15,7 @@ With that in mind, TypeSerializer's main goals are:
   * Resilient to schema changes
   * Serializes / De-serializes any .NET data type (by convention)
     * Supports custom, compact serialization of structs by overriding `ToString()` and `static T Parse(string)` methods
-    * Can also serialize inherited, interface or 'late-bound objects' data types
+    * Can serialize inherited, interface or 'late-bound objects' data types
     * Respects opt-in DataMember custom serialization for DataContract dto types.
 
 These characteristics make it ideal for use anywhere you need to store or transport .NET data-types, e.g. for text blobs in a ORM, data in and out of a key-value store or as the text-protocol in .NET to .NET web services.  
