--- a/wiki/RedisWindowsDownload.wiki
+++ b/wiki/RedisWindowsDownload.wiki
@@ -21,7 +21,7 @@ Download latest stable release of Redis 1.2.5:
   * [http://servicestack.googlecode.com/files/redis-1.2.5-windows.zip redis-1.2.5-windows.zip]
 
 = Getting Started =
-Due to the popularity and simplicity of the Redis protocol there is a plethora of [http://code.google.com/p/redis/wiki/SupportedLanguages different Redis clients bindings] for almost every popular language in use today. 
+Due to the popularity and simplicity of the Redis protocol there is a plethora of different Redis clients bindings for almost every popular language in use today. 
 
 For .NET applications you can download and use the [http://code.google.com/p/servicestack/wiki/ServiceStackRedis ServiceStack's open source c# Redis client library].
 
