--- a/wiki/RedisWindowsDownload.wiki
+++ b/wiki/RedisWindowsDownload.wiki
@@ -8,7 +8,7 @@ Redis is one of the fastest and most feature-rich in-memory key value data store
 The description of Redis from the [http://code.google.com/p/redis/ Redis project's website] states:
   Redis is an advanced key-value store. It is similar to memcached but the dataset is not volatile, and values can be strings, exactly like in memcached, but also lists, sets, and ordered sets. All this data types can be manipulated with atomic operations to push/pop elements, add/remove elements, perform server side union, intersection, difference between sets, and so forth. Redis supports different kind of sorting abilities.
 
-Like most open-source technology Redis was born and is primarily developed on `*`NIX operating systems. If you're looking to install on a `*`NIX platform then the best place to download Redis is from the [http://code.google.com/p/redis/ redis project website].
+Like most open-source technology Redis was born and is primarily developed on `*`NIX operating systems. If you're looking to install on a `*`NIX platform the best place to download Redis is still from the [http://code.google.com/p/redis/ redis project website].
 
 Having the latest version of Redis running on windows is important for the development of ServiceStack's open source C# Redis client to keep up-to-date with the latest Redis features. As there has historically have been no reliable source for the latest Windows Redis Server builds, ServiceStack will be hosting current and future builds for Windows.
 
