--- a/wiki/RedisWindowsDownload.wiki
+++ b/wiki/RedisWindowsDownload.wiki
@@ -10,7 +10,7 @@ The description of Redis from the [http://code.google.com/p/redis/ Redis project
 
 Like most open-source technology Redis was born and is primarily developed on `*`NIX operating systems. If you're looking to install on a `*`NIX platform the best place to download Redis is still from the [http://code.google.com/p/redis/ redis project website].
 
-Having the latest version of Redis running on windows is important for the development of [http://code.google.com/p/servicestack/wiki/ServiceStackRedis ServiceStack's open source C# Redis client] to keep up-to-date with the latest Redis features. As there has historically have been no reliable source for the latest builds for Windows, ServiceStack will be hosting current and future builds of the Redis server for Windows on this page.
+Having the latest version of Redis running on windows is important for the development of [ServiceStackRedis ServiceStack's open source C# Redis client] to keep up-to-date with the latest Redis features. As there has historically have been no reliable source for the latest builds for Windows, ServiceStack will be hosting current and future builds of the Redis server for Windows on this page.
 
 = Download for Windows =
 
@@ -23,6 +23,6 @@ Download latest stable release of Redis 1.2.5:
 = Getting Started =
 Due to the popularity and simplicity of the Redis protocol there is a plethora of different Redis clients bindings for almost every popular language in use today. 
 
-For .NET applications you can download and get started with [http://code.google.com/p/servicestack/wiki/ServiceStackRedis ServiceStack's open source c# Redis client library].
+For .NET applications you can download and get started with [ServiceStackRedis ServiceStack's open source c# Redis client library].
 
 For Java applications the most active library at the moment is [http://code.google.com/p/jredis/ jredis]. For all other language bindings visit the [http://code.google.com/p/redis/wiki/SupportedLanguages redis supported languages page].
