--- a/wiki/IRedisNativeClient.wiki
+++ b/wiki/IRedisNativeClient.wiki
@@ -12,8 +12,17 @@ Each method maps to 1:1 to a [http://code.google.com/p/redis/wiki/CommandReferen
 public interface IRedisNativeClient 
 	: IDisposable
 {
+	//Redis utility operations
 	Dictionary<string, string> Info { get; }
 	int Db { get; set; }
+	string Save();
+	void BgSave();
+	void Shutdown();
+	void Quit();
+	void FlushDb();
+	void FlushAll();
+
+	//Common key-value Redis operations
 	void Set(string key, byte[] value);
 	int SetNX(string key, byte[] value);
 	byte[] Get(string key);
@@ -29,16 +38,25 @@ public interface IRedisNativeClient
 	int ExpireAt(string key, long unixTime);
 	int Ttl(string key);
 
-	string Save();
-	void BgSave();
-	void Shutdown();
-	void Quit();
-	void FlushDb();
-	void FlushAll();
-
+	//Redis Sort operation (works on lists and sets)
 	byte[][] Sort(string listOrSetId, int startingFrom, int endingAt, bool sortAlpha, bool sortDesc);
 
 
+	//Redis List operations
+	byte[][] LRange(string listId, int startingFrom, int endingAt);
+	void RPush(string listId, byte[] value);
+	void LPush(string listId, byte[] value);
+	void LTrim(string listId, int keepStartingFrom, int keepEndingAt);
+	int LRem(string listId, int removeNoOfMatches, byte[] value);
+	int LLen(string listId);
+	byte[] LIndex(string listId, int listIndex);
+	void LSet(string listId, int listIndex, byte[] value);
+	byte[] LPop(string listId);
+	byte[] RPop(string listId);
+	byte[] RPopLPush(string fromListId, string toListId);
+
+
+	//Redis Set operations
 	byte[][] SMembers(string setId);
 	void SAdd(string setId, byte[] value);
 	void SRem(string setId, byte[] value);
@@ -55,19 +73,7 @@ public interface IRedisNativeClient
 	byte[] SRandMember(string setId);
 
 
-	byte[][] LRange(string listId, int startingFrom, int endingAt);		
-	void RPush(string listId, byte[] value);
-	void LPush(string listId, byte[] value);
-	void LTrim(string listId, int keepStartingFrom, int keepEndingAt);
-	int LRem(string listId, int removeNoOfMatches, byte[] value);
-	int LLen(string listId);
-	byte[] LIndex(string listId, int listIndex);
-	void LSet(string listId, int listIndex, byte[] value);
-	byte[] LPop(string listId);
-	byte[] RPop(string listId);
-	byte[] RPopLPush(string fromListId, string toListId);
-
-
+	//Redis Sorted Set operations
 	int ZAdd(string setId, double score, byte[] value);
 	int ZRem(string setId, byte[] value);
 	double ZIncrBy(string setId, double incrBy, byte[] value);
@@ -87,6 +93,7 @@ public interface IRedisNativeClient
 	int ZUnion(string intoSetId, params string[] setIds);
 	int ZInter(string intoSetId, params string[] setIds);
 
+	//Redis Hash operations
 	int HSet(string hashId, string key, byte[] value);
 	byte[] HGet(string hashId, string key);
 	int HDel(string hashId, string key);
