--- a/wiki/RedisClientReleaseNotes.wiki
+++ b/wiki/RedisClientReleaseNotes.wiki
@@ -3,8 +3,8 @@ Latest release notes for the latest version of the c# [ServiceStackRedis Service
 
 = Redis Client v1.08 Release Notes =
 
-API compatibility:
+=== API compatibility ===
 This version of the client includes support for the Redis 1.3.7 API. This includes support for Redis Sorted Sets and Hash operations.
 
-Breaking API changes:
+=== Breaking API changes: ===
   * As a result of a breaking change in the Redis 1.3.7 KEYS operations, IRedisClient.AllKeys and IRedisClient.GetKeys() now return a `List<string>`.
