--- a/wiki/RedisClientReleaseNotes.wiki
+++ b/wiki/RedisClientReleaseNotes.wiki
@@ -4,7 +4,20 @@ Latest release notes for the latest version of the c# [ServiceStackRedis Service
 = Redis Client v1.08 Release Notes =
 
 === API compatibility ===
-This version of the client includes support for the Redis 1.3.7 API. This includes support for Redis Sorted Sets and Hash operations.
+This version of the client includes support for the Redis 1.3.7 API. This includes support for Redis Sorted Set and Hash operations.
+
+=== Features ===
+  * Included in the release is preliminary support for Transient Redis Message Queues.
+  * Thread-safe load balanced `PooledRedisClientManager` and `BasicRedisClientManager` client managers suitable to drop in any IOC.
+      * Support configuration of multiple read-write masters and read-only slave Redis instances.
 
 === Breaking API changes: ===
-  * As a result of a breaking change in the Redis 1.3.7 KEYS operations, IRedisClient.AllKeys and IRedisClient.GetKeys() now return a `List<string>`.
+  * Due to a change in the Redis 1.3.7 KEYS operation, `IRedisClient.AllKeys` and `IRedisClient.GetKeys()` now return a `List<string>`.
+
+= Download =
+The latest version of the open source c# redis client is available:
+  * As a stand-alone dll - http://servicestack.googlecode.com/files/ServiceStack.Redis.dll
+  * Or bundled inside the core Service Stack binaries - http://servicestack.googlecode.com/files/ServiceStack.zip
+
+Download the stable and development release of the Redis Server Windows builds here:
+http://code.google.com/p/servicestack/wiki/RedisWindowsDownload
